--- a/package.json
+++ b/package.json
@@ -1,24 +1,31 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "test description",
-  "main": "index.js",
-  "scripts": {
-    "test": "test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lupuscaoticus/test.git"
-  },
-  "keywords": [
-    "lupuscaoticus",
-    "test",
-    "repo"
-  ],
-  "author": "lupuscaoticus@gmail.com",
-  "license": "BSD-3-Clause",
-  "bugs": {
-    "url": "https://github.com/lupuscaoticus/test/issues"
-  },
-  "homepage": "https://github.com/lupuscaoticus/test#readme"
+    "name": "test",
+    "version": "1.0.0",
+    "description": "test description",
+    "main": "index.js",
+    "scripts": {
+        "prepare": "tsc",
+        "test": "mocha"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/lupuscaoticus/test.git"
+    },
+    "keywords": [
+        "lupuscaoticus",
+        "test",
+        "repo"
+    ],
+    "author": "lupuscaoticus@gmail.com",
+    "license": "BSD-3-Clause",
+    "bugs": {
+        "url": "https://github.com/lupuscaoticus/test/issues"
+    },
+    "homepage": "https://github.com/lupuscaoticus/test#readme",
+    "devDependencies": {
+        "@types/mocha": "^5.0.0",
+        "@types/node": "^9.6.5",
+        "mocha": "^5.1.0",
+        "typescript": "^2.8.1"
+    }
 }
