build test and coverage integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,26 @@
 language: node_js
 node_js:
-  - '9'
+  - '8.11'
   - '8'
+  - '9.11'
+  - '9'
+matrix:
+  include:
+    - node_js: "9"
+      env: "NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly"
+    - node_js: "10"
+      env: "NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly"
+  allow_failures:
+    # Allow the nightly installs to fail
+    - env: "NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly"
+sudo: false
+cache:
+  directories:
+    - node_modules
+before_install:
+  - "test ! -d node_modules || npm prune"
+  - "test ! -d node_modules || npm rebuild"
+script:
+  - "npm run test-coverage"
+after_script: 
+  - "npm run report-coverage"
