--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "scripts": {
         "prepare": "tsc",
-        "test": "mocha"
+        "test": "mocha",
+        "test-coverage": "istanbul cover _mocha --report lcovonly -- -R spec",
+        "report-coverage": "cat coverage/lcov.info | coveralls && rm -rf coverage"
     },
     "repository": {
         "type": "git",
@@ -25,7 +27,12 @@
     "devDependencies": {
         "@types/mocha": "^5.0.0",
         "@types/node": "^9.6.5",
+        "coveralls": "^3.0.0",
+        "istanbul": "^0.4.5",
         "mocha": "^5.1.0",
+        "mocha-lcov-reporter": "^1.3.0",
+        "tslint": "^5.9.1",
         "typescript": "^2.8.1"
-    }
+    },
+    "dependencies": {}
 }
