--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,13 @@ cache:
   directories:
     - node_modules
 before_install:
+  - '[[ $(node -v) =~ ^v9.*$ ]] || npm install -g npm@latest' # skipped when using node 9
+  - npm install -g greenkeeper-lockfile@1
   - "test ! -d node_modules || npm prune"
   - "test ! -d node_modules || npm rebuild"
+before_script: greenkeeper-lockfile-update
 script:
   - "npm run test-coverage"
 after_script: 
   - "npm run report-coverage"
+  - greenkeeper-lockfile-upload
