--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,12 +1,3 @@
-lsi: false
-safe: true
-source: 'docs/'
-incremental: false
-highlighter: rouge
-gist:
-  noscript: false
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: rouge
+markdown: GFM
 plugins:
   - jemoji
