--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,7 @@
 title: test
 description: Test Docs of test repo
-show_downloads: true
 markdown: GFM
+theme: jekyll-theme-slate
+show_downloads: true
 plugins:
   - jemoji
