--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: node_js
 node_js:
-  - '8.11'
-  - '8'
-  - '9.11'
-  - '9'
-  - '10'
+  - '18'
+  - '19'
 matrix:
   include:
-    - node_js: "9"
+    - node_js: "18"
       env: "NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly"
-    - node_js: "10"
+    - node_js: "19"
       env: "NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly"
   allow_failures:
     # Allow the nightly installs to fail
@@ -19,7 +16,7 @@ cache:
   directories:
     - node_modules
 before_install:
-  - '[[ $(node -v) =~ ^v9.*$ ]] || npm install -g npm@latest' # skipped when using node 9
+  - "npm install -g npm@latest"
   - "test ! -d node_modules || npm prune"
   - "test ! -d node_modules || npm rebuild"
 script: "npm test"
