--- a/.github/workflows/node.js_ci.yml
+++ b/.github/workflows/node.js_ci.yml
@@ -28,5 +28,7 @@ jobs:
     - run: npm ci
     - run: npm test
     - run: npm run coverage
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2.0.0
