--- a/.github/workflows/node.js_ci.yml
+++ b/.github/workflows/node.js_ci.yml
@@ -28,7 +28,9 @@ jobs:
     - run: npm ci
     - run: npm test
     - run: npm run coverage
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v3
     - name: Coveralls GitHub Action
       uses: coverallsapp/github-action@v2.0.0
+    - run: sed -i 's/\/home\/runner\/work\/test\/test\///' /home/runner/work/test/test/coverage/coverage.json
+    - run: sed -i 's/\/home\/runner\/work\/test\/test\///' /home/runner/work/test/test/coverage/lcov.info
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
