--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "istanbul": "^0.4.5",
         "mocha": "^6.0.0",
         "mocha-lcov-reporter": "^1.3.0",
+        "source-map-support": "^0.5.21",
         "tslint": "^5.9.1",
         "typescript": "^2.8.1"
     },
