--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "prepare": "tsc",
-        "test": "mocha",
+        "test": "nyc mocha",
         "coverage": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- -R spec",
         "report-coverage": "cat coverage/lcov.info | coveralls && rm -rf coverage"
     },
