--- a/package.json
+++ b/package.json
@@ -1,39 +1,58 @@
 {
-    "name": "test",
-    "version": "1.0.0",
-    "description": "test description",
-    "main": "index.js",
-    "scripts": {
-        "prepare": "tsc",
-        "test": "nyc mocha",
-        "coverage": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- -R spec",
-        "report-coverage": "cat coverage/lcov.info | coveralls && rm -rf coverage"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/lupuscaoticus/test.git"
-    },
-    "keywords": [
-        "lupuscaoticus",
-        "test",
-        "repo"
+  "name": "test",
+  "version": "1.0.0",
+  "description": "test description",
+  "main": "index.js",
+  "scripts": {
+    "prepare": "tsc",
+    "test": "jest",
+    "coveralls": "cat coverage/lcov.info | coveralls"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/__tests__/**/*.{ts,tsx}",
+      "**/(?(*.)spec|?(*.)test).{ts,tsx}",
+      "!**/node_modules/**",
+      "!**/vendor/**",
+      "!**/coverage/**",
+      "!**/docs/**"
     ],
-    "author": "lupuscaoticus@gmail.com",
-    "license": "BSD-3-Clause",
-    "bugs": {
-        "url": "https://github.com/lupuscaoticus/test/issues"
-    },
-    "homepage": "https://github.com/lupuscaoticus/test#readme",
-    "devDependencies": {
-        "@types/mocha": "^7.0.0",
-        "@types/node": "^11.9.0",
-        "coveralls": "^3.0.0",
-        "istanbul": "^0.4.5",
-        "mocha": "^6.0.0",
-        "mocha-lcov-reporter": "^1.3.0",
-        "source-map-support": "^0.5.21",
-        "tslint": "^5.9.1",
-        "typescript": "^2.8.1"
-    },
-    "dependencies": {}
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "**/*.{js,jsx,ts,tsx}",
+      "!**/__tests__/**/*.{js,jsx,ts,tsx}",
+      "!**/(?(*.)spec|?(*.)test).{js,jsx,ts,tsx}",
+      "!**/node_modules/**",
+      "!**/vendor/**",
+      "!**/coverage/**",
+      "!**/docs/**"
+    ],
+    "coverageDirectory": "coverage",
+    "coverageProvider": "v8"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lupuscaoticus/test.git"
+  },
+  "keywords": [
+    "lupuscaoticus",
+    "test",
+    "repo"
+  ],
+  "author": "lupuscaoticus@gmail.com",
+  "license": "BSD-3-Clause",
+  "bugs": {
+    "url": "https://github.com/lupuscaoticus/test/issues"
+  },
+  "homepage": "https://github.com/lupuscaoticus/test#readme",
+  "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.10",
+    "coveralls": "^3.1.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
+    "typescript": "^5.0.2"
+  }
 }
