--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
         "removeComments": true,
         "strict": true,
         "stripInternal": true,
-        "target": "es2016"
+        "target": "ES2016"
     }
 }
